<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="csp_case_main_statistics_debug_struct" Id="{3b4ff747-e395-4b19-9219-c0b04fa4e8ab}">
    <Declaration><![CDATA[TYPE csp_case_main_statistics_debug_struct :
STRUCT
	step_id:				INT;
	reject_reason:			DWORD;
	status:					DWORD;
	//item_has:				INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>